fix broken styles for sharing pannel (#3002)
* fix broken styles for sharing pannel

* set space between list items

--- a/assets/admin_themes/Sea_Green/card/card.scss
+++ b/assets/admin_themes/Sea_Green/card/card.scss
@@ -91,10 +91,10 @@
     }
 
     // Remove body top padding if it comes after a header
-    .card-header + .card-body {
-        padding-top : 0;
-        margin-top  : -1rem;
-    }
+    // .card-header + .card-body {
+    //     padding-top : 0;
+    //     margin-top  : -1rem;
+    // }
 
     .card-footer {
         justify-content  : flex-start;
