--- a/themes/admin/Sea_Green/css/sea_green.css
+++ b/themes/admin/Sea_Green/css/sea_green.css
@@ -17323,10 +17323,6 @@ ol.breadcrumb.title-bar-breadcrumb li.active {
   background-color: unset;
   border: none;
 }
-.card.card-primary .card-header + .card-body {
-  padding-top: 0;
-  margin-top: -1rem;
-}
 .card.card-primary .card-footer {
   justify-content: flex-start;
   height: unset;
